--- a/MovieWebApplication/appsettings.json
+++ b/MovieWebApplication/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "ConToDb": "Server=DESKTOP-9AGM564\\SQLEXPRESS;Database=FavoritesMovies;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
