--- a/MovieWebApplication/MovieWebApplication.csproj
+++ b/MovieWebApplication/MovieWebApplication.csproj
@@ -5,6 +5,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\assets\bootstrap\css\bootstrap.min.css" />
+    <None Include="wwwroot\assets\bootstrap\js\bootstrap.min.js" />
+    <None Include="wwwroot\assets\fonts\ionicons.eot" />
+    <None Include="wwwroot\assets\fonts\ionicons.min.css" />
+    <None Include="wwwroot\assets\fonts\ionicons.svg" />
+    <None Include="wwwroot\assets\fonts\ionicons.ttf" />
+    <None Include="wwwroot\assets\fonts\ionicons.woff" />
+    <None Include="wwwroot\assets\img\nature\image1.jpg" />
+    <None Include="wwwroot\assets\img\nature\image2.jpg" />
+    <None Include="wwwroot\assets\img\nature\image3.jpg" />
+    <None Include="wwwroot\assets\img\nature\image4.jpg" />
+    <None Include="wwwroot\assets\img\nature\image5.jpg" />
+    <None Include="wwwroot\assets\img\nature\image6.jpg" />
+    <None Include="wwwroot\assets\img\tech\image4.jpg" />
+    <None Include="wwwroot\assets\js\jquery.min.js" />
+    <None Include="wwwroot\assets\js\theme.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
